# hmmBaumWelch

./: .gitignore  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pypi_documentation.md  pyproject.toml  setup.cfg
archived/: PriorDistributions.py
examples/: example_implementation.ipynb
hmmBaumWelch/: BaumWelch.py  __init__.py
hmmBaumWelch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: BaumWelch_test.py  test_BaumWelch.py  test_BaumWelch_params.yaml
