[metadata]
name = hmmBaumWelch
version = 0.1
description = Expectation maximisation and inference for hidden Markov models with discrete observed variables.
long_description= file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    numpy
    pandas
    scipy
packages = find:
[options.packages.find]

exclude =
    docs*
    tests*
    .git,
    __pycache__,
    dist,
    build
